Deploy on render

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "rm -rf frontend-static ; cd FRONTEND-REACT ; npm run build ; mv dist ../frontend-static ; git add ../frontend-static ; git commit -m 'Add new version of React.' ; git push"
   },
   "repository": {
     "type": "git",
